--- a/www/index.html
+++ b/www/index.html
@@ -27,17 +27,17 @@
         <link rel="stylesheet" type="text/css" href="css/jquery.mobile.structure-1.3.0.min.css" />
         <link rel="stylesheet" type="text/css" href="css/jquery.mobile.theme-1.3.0.min.css" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <title>Prodici</title>
+        <title>PRODICI</title>
     </head>
     <body>
         <div data-role="page" data-theme="a" id="demo-page" class="my-page" data-url="demo-page">
             <div data-role="header">
-                <h1>Prodici</h1>
+                <h1>PRODICI</h1>
                 <fieldset data-role="controlgroup" data-type="horizontal" data-mini="true" class="ui-btn-right">
                     <input type="radio" name="language" id="spanish" value="spanish" checked="checked">
                     <label for="spanish">Español</label>
                     <input type="radio" name="language" id="english" value="english">
-                    <label for="english">Inglés</label>
+                    <label for="english">English</label>
                 </fieldset>
             </div><!-- /header -->
             <div data-role="content">
@@ -54,7 +54,8 @@
                     <p>Content</p>
                 </div>
             </div><!-- /content -->
-            <div data-role="footer" data-theme="none">
+            <div data-role="footer" data-position="fixed" data-theme="none" data-tap-toggle="false">
+                <h2 id='BRL'>BRL Research LTDA</h2>
                 <h3 id='footerMessage'>Toque una revista para abrirla</h3>
             </div><!-- /footer -->
         </div><!-- /page -->
